# ai-chat

./: README.md  pyproject.toml
.claude/: settings.local.json
.claude/memory/: MEMORY.md  ai-chat-project-plan.md
.claude/skills/self-improving-agent/.learnings/: LEARNINGS.md
app/agent/: factory.py  service.py  tools.py
app/tools/: __init__.py  adapter.py  base.py  registry.py
openspec/changes/archive/2026-04-16-implement-llm-clients/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-16-implement-llm-clients/specs/anthropic-client/: spec.md
openspec/changes/archive/2026-04-16-implement-llm-clients/specs/llm-client/: spec.md
openspec/changes/archive/2026-04-16-implement-llm-clients/specs/openai-client/: spec.md
openspec/changes/archive/2026-04-17-agent-base-url-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-17-agent-base-url-support/specs/agent-base-url/: spec.md
openspec/changes/archive/2026-04-17-implement-cli-interface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-17-implement-cli-interface/specs/cli-entry/: spec.md
openspec/changes/archive/2026-04-17-implement-cli-interface/specs/history-commands/: spec.md
openspec/changes/archive/2026-04-17-implement-cli-interface/specs/model-selection/: spec.md
openspec/changes/archive/2026-04-17-implement-cli-interface/specs/streaming-output/: spec.md
openspec/changes/archive/2026-04-17-implement-langchain-agent/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-17-implement-langchain-agent/specs/agent-api/: spec.md
openspec/changes/archive/2026-04-17-implement-langchain-agent/specs/agent-cli/: spec.md
openspec/changes/archive/2026-04-17-implement-langchain-agent/specs/agent-core/: spec.md
openspec/changes/archive/2026-04-17-implement-langchain-agent/specs/agent-tools/: spec.md
openspec/changes/archive/2026-04-20-fix-tool-calling-code-review-issues/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-implement-tool-calling/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-implement-tool-calling/specs/tool-adapter/: spec.md
openspec/changes/archive/2026-04-20-implement-tool-calling/specs/tool-base/: spec.md
openspec/changes/archive/2026-04-20-implement-tool-calling/specs/tool-registry/: spec.md
src/ai_chat/: settings.py
src/ai_chat/agent/: __init__.py  client.py  factory.py  service.py  tools.py
src/ai_chat/api/: models.py  server.py
src/ai_chat/cli/: __init__.py  factory.py  main.py
src/ai_chat/clients/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py
tests/: test_cli.py  test_tools.py
